--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -43,6 +43,8 @@ apache_mods_enabled:
   - rewrite.load
   - ssl.load
   - headers.load
+  - proxy
+  
 apache_mods_disabled: []
 
 # Set initial apache state. Recommended values: `started` or `stopped`
